trying stack overflow fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -120,17 +120,29 @@ input, select, textarea {
 		}
 
 		@media screen and (max-width: 1280px) {
-			body {
+			/* body {
 				background-color: #000000;
-				/* background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/Hearing Colors.jpg"); */
 				background-image: url("../../images/Hearing Colors.jpg");
 				background-size: contain;
 				background-position: top, center;
-				/* background-position-y: 73%; */
 				background-attachment: scroll;
 				background-repeat: no-repeat;
 				z-index: -10;
+			} */
+			body:before {
+				content: ' ';
+				display: block;
+				background-image: url('../../images/Hearing Colors.jpg');
+				background-position: top center; 
+				background-size: contain;
+				top: 0;
+				bottom: 0;
+				left: 0;
+				right: 0;
+				position: fixed;
+				z-index: -10; 
 			}
+
 		
 				body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 					-moz-animation: none !important;
@@ -145,17 +157,29 @@ input, select, textarea {
 		}
 		
 		@media screen and (max-width: 980px) {
-			body {
+			/* body {
 				background-color: #000000;
-				/* background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/Hearing Colors.jpg"); */
 				background-image: url("../../images/Hearing Colors.jpg");
 				background-size: contain;
 				background-position: top, center;
-				/* background-position-y: 73%; */
 				background-attachment: scroll;
 				background-repeat: no-repeat;
 				z-index: -10;
+			} */
+			body:before {
+				content: ' ';
+				display: block;
+				background-image: url('../../images/Hearing Colors.jpg');
+				background-position: top center; 
+				background-size: contain;
+				top: 0;
+				bottom: 0;
+				left: 0;
+				right: 0;
+				position: fixed;
+				z-index: -10; 
 			}
+
 		
 				body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 					-moz-animation: none !important;
@@ -170,16 +194,27 @@ input, select, textarea {
 		}
 		
 		@media screen and (max-width: 736px) {
-			body {
+			/* body {
 				background-color: #000000;
-				/* background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/Hearing Colors.jpg"); */
 				background-image: url("../../images/Hearing Colors.jpg");
 				background-size: contain;
 				background-position: top, center;
-				/* background-position-y: 73%; */
 				background-attachment: scroll;
 				background-repeat: no-repeat;
 				z-index: -10;
+			} */
+			body:before {
+				content: ' ';
+				display: block;
+				background-image: url('../../images/Hearing Colors.jpg');
+				background-position: top center; 
+				background-size: contain;
+				top: 0;
+				bottom: 0;
+				left: 0;
+				right: 0;
+				position: fixed;
+				z-index: -10; 
 			}
 		
 				body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -195,17 +230,29 @@ input, select, textarea {
 		}
 		
 		@media screen and (max-width: 480px) {
-			body {
+			/* body {
 				background-color: #000000;
-				/* background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/Hearing Colors.jpg"); */
 				background-image: url("../../images/Hearing Colors.jpg");
 				background-size: contain;
 				background-position: top, center;
-				/* background-position-y: 73%; */
 				background-attachment: scroll;
 				background-repeat: no-repeat;
 				z-index: -10;
+			} */
+			body:before {
+				content: ' ';
+				display: block;
+				background-image: url('../../images/Hearing Colors.jpg');
+				background-position: top center; 
+				background-size: contain;
+				top: 0;
+				bottom: 0;
+				left: 0;
+				right: 0;
+				position: fixed;
+				z-index: -10; 
 			}
+
 		
 				body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 					-moz-animation: none !important;
@@ -220,17 +267,29 @@ input, select, textarea {
 		}
 		
 		@media screen and (max-width: 360px) {
-			body {
+			/* body {
 				background-color: #000000;
-				/* background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/Hearing Colors.jpg"); */
 				background-image: url("../../images/Hearing Colors.jpg");
 				background-size: contain;
 				background-position: top, center;
-				/* background-position-y: 73%; */
 				background-attachment: scroll;
 				background-repeat: no-repeat;
 				z-index: -10;
+			} */
+			body:before {
+				content: ' ';
+				display: block;
+				background-image: url('../../images/Hearing Colors.jpg');
+				background-position: top center; 
+				background-size: contain;
+				top: 0;
+				bottom: 0;
+				left: 0;
+				right: 0;
+				position: fixed;
+				z-index: -10; 
 			}
+
 		
 				body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 					-moz-animation: none !important;
